Correct s2 text-align

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
     align-items: center;
 }
 
-.s2-title {
+.s2 {
     text-align: center;
 }
 
